--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700;900&display=swap');
 
-*, ::before, ::after {
+* {
 
     box-sizing: border-box;
+
 }
 
 html {
@@ -15,7 +16,7 @@ html {
 
 body {
 
-    margin: 0px 0px 0px 0px;
+    margin: 0px;
 
     font-family: "Nunito", sans-serif;
 
@@ -31,6 +32,8 @@ h1, h2, p {
 
     margin: 0px;
 
+    padding: 0px;
+
 }
 
 ul {
@@ -40,12 +43,6 @@ ul {
     padding: 0px;
 
     list-style: none;
-
-}
-
-a {
-
-    text-decoration: none;
 
 }
 
@@ -93,6 +90,8 @@ a {
 
 .section {
 
+    box-sizing: border-box;
+
     padding-top: 3rem;
 
     padding-bottom: 2rem;
@@ -110,6 +109,8 @@ a {
     grid-column-gap: 2rem;
 
     width: 100%;
+
+    box-sizing: border-box;
 
     padding: 1.5rem;
 
@@ -209,16 +210,12 @@ header.main_header nav.page_nav {
     main.main_dashboard section.home {
 
         height: 100vh;
-
-        border: 1px solid black;
     
     }
     
     main.main_dashboard section.home div.home_data {
     
         align-self: center;
-
-        border: 1px solid black;
     
     }
     
@@ -235,8 +232,6 @@ header.main_header nav.page_nav {
         margin-top: 2.5rem;
     
         margin-bottom: 1.5rem;
-
-        border: 1px solid black;
     
     }
     
@@ -258,8 +253,6 @@ header.main_header nav.page_nav {
     
         margin-bottom: 2.5rem;
 
-        border: 1px solid black;
-
         box-sizing: border-box;
 
         padding-right: 15px;
@@ -272,7 +265,7 @@ header.main_header nav.page_nav {
     
         font-size: 2.8rem;
 
-        border: 1px solid red;
+        box-sizing: border-box;
     
     }
     
@@ -314,8 +307,6 @@ header.main_header nav.page_nav {
     
         bottom: 15px;
 
-        border: 1px solid black;
-    
     }
     
     main.main_dashboard section.home div.home_logo div.home_company_logo {
@@ -353,6 +344,8 @@ header.main_header nav.page_nav {
         letter-spacing: 2px;
     
         text-transform: uppercase;
+
+        text-decoration: none;
     
         border-radius: .3rem;
 
@@ -393,6 +386,8 @@ header.main_header nav.page_nav {
         font-weight: 400;
     
         color: #464146;
+
+        box-sizing: border-box;
 
         padding: 0px 20px 0px 20px;
 
@@ -517,6 +512,8 @@ header.main_header nav.page_nav {
         list-style: none;
 
         display: flex;
+
+        box-sizing: border-box;
 
         margin: 0px;
 
@@ -700,6 +697,8 @@ header.main_header nav.page_nav {
 
         font-size: 0.85rem;
 
+        box-sizing: border-box;
+
         padding: 0px 20px 0px 20px;
 
         color: #464146;
@@ -859,6 +858,8 @@ header.main_header nav.page_nav {
         font-weight: 400;
 
         font-size: 1rem;
+
+        box-sizing: border-box;
 
         padding: 0px 20px 0px 20px;
 
