--- a/css/styles.css
+++ b/css/styles.css
@@ -366,22 +366,34 @@ header.main_header nav.page_nav {
         row-gap: 2rem;
 
         box-sizing: border-box;
-
-        padding: 0px;
-
-        margin: 0px;
     
         text-align: justify;
-
-        border: 1px solid black;
     
     }
     
+    main.main_dashboard section.about div.about_container div.about_img {
+    
+        justify-self: center;
+    
+        width: 400px;
+    
+        height: 400px;
+    
+        background-image: url("../vectors/security_guards.svg");
+    
+        background-repeat: no-repeat;
+    
+        background-position: center;
+    
+        background-size: 400px;
+    
+    }
+
     main.main_dashboard section.about div.about_container div.about_contents p.about_text {
 
         font-family: "Nunito", sans-serif;
     
-        font-size: 1rem;
+        font-size: 1.2rem;
         
         font-weight: 400;
     
@@ -389,9 +401,7 @@ header.main_header nav.page_nav {
 
         box-sizing: border-box;
 
-        padding: 0px 20px 0px 20px;
-
-        border: 1px solid black;
+        padding: 0px;
 
     }
     
@@ -402,34 +412,12 @@ header.main_header nav.page_nav {
         color: #496D96;
     
     }
-    
-    main.main_dashboard section.about div.about_container div.about_img {
-    
-        justify-self: center;
-    
-        width: 360px;
-    
-        height: 360px;
-    
-        background-image: url("../vectors/security_guards.svg");
-    
-        background-repeat: no-repeat;
-    
-        background-position: center;
-    
-        background-size: 360px;
-
-        border: 1px solid black;
-    
-    }
 
     section.services div.container {
 
         width: 100%;
 
         margin: 10px auto;
-
-        border: 1px solid black;
 
     }
 
@@ -521,15 +509,13 @@ header.main_header nav.page_nav {
 
         background-color: transparent;
 
-        border: 1px solid black;
-
     }
 
     section.services div.container div.carousel div.controls ul#section_indicators li {
 
-        width: 25px;
+        width: 30px;
 
-        height: 25px;
+        height: 30px;
 
         border: 2px solid #B1BECD;
 
@@ -559,8 +545,6 @@ header.main_header nav.page_nav {
 
         box-sizing: border-box;
 
-        border: 1px solid black;
-
     }
 
     section.services div.container div.carousel div.slider section.subsection_slider div#slider1_right_col {
@@ -576,8 +560,6 @@ header.main_header nav.page_nav {
         background-repeat: no-repeat;
 
         background-position: center;
-
-        border: 1px solid black;
 
     }
 
@@ -595,8 +577,6 @@ header.main_header nav.page_nav {
 
         background-position: center;
 
-        border: 1px solid black;
-
     }
 
     section.services div.container div.carousel div.slider section.subsection_slider div#slider3_right_col {
@@ -612,8 +592,6 @@ header.main_header nav.page_nav {
         background-repeat: no-repeat;
 
         background-position: center;
-
-        border: 1px solid black;
 
     }
 
@@ -631,8 +609,6 @@ header.main_header nav.page_nav {
 
         background-position: center;
 
-        border: 1px solid black;
-
     }
 
     section.services div.container div.carousel div.slider section.subsection_slider div#slider5_right_col {
@@ -649,11 +625,11 @@ header.main_header nav.page_nav {
 
         background-position: center;
 
-        border: 1px solid black;
-
     }
 
     section.services div.container div.carousel div.slider section.subsection_slider div.slider_left_col {
+
+        align-self: center;
 
         flex-basis: 60%;
 
@@ -663,7 +639,9 @@ header.main_header nav.page_nav {
 
         align-items: center;
 
-        border: 1px solid black;
+        box-sizing: border-box;
+
+        padding: 0px 20px 0px 20px;
 
     }
 
@@ -685,8 +663,6 @@ header.main_header nav.page_nav {
 
         text-transform: uppercase;
 
-        border: 1px solid black;
-
     }
 
     section#services div.container div.carousel div.slider section.subsection_slider div.slider_left_col p.slider_content {
@@ -697,15 +673,11 @@ header.main_header nav.page_nav {
 
         font-size: 0.85rem;
 
-        box-sizing: border-box;
-
-        padding: 0px 20px 0px 20px;
-
         color: #464146;
 
         text-align: justify;
 
-        border: 1px solid black;
+        align-self: center;
 
     }
 
